refactor(render): 优化块渲染器中的世界引用和方法调用
- 移除未使用的 BlockRenderView 导入
- 直接使用 clientWorld 替代中间变量 world
- 使用 getFirst() 方法替代 get(0) 获取列表首个元素
- 简化方法引用语法提高代码简洁性
- 优化条件判断逻辑移除冗余检查